# rosbag_analysis_task

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  startpoint.sh
include/rosbag_analysis_task/: error_detector.h
launch/: analyse.launch
rviz/: analysis.rviz
settings/: topics.yaml
src/: error_detector.cpp  rosbag_analysis.cpp
